Improved efficiency of cell categorization algorithm

--- a/BatchProcessingScript.ipynb
+++ b/BatchProcessingScript.ipynb
@@ -213,7 +213,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "0453edd5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -237,13 +239,15 @@
     "cell_counts.loc[:, :] = 0\n",
     "\n",
     "# Used in categorizing and counting cells\n",
-    "category_codes = {4: 'G',\n",
-    "                  2: 'R',\n",
-    "                  1: 'W',\n",
-    "                  6: 'GR',\n",
-    "                  5: 'GW', \n",
-    "                  3: 'RW', \n",
-    "                  7: 'GRW'}\n",
+    "category_code_dict = {\n",
+    "    'G': 4,\n",
+    "    'R': 2,\n",
+    "    'W': 1,\n",
+    "    'GR': 6,\n",
+    "    'GW': 5, \n",
+    "    'RW': 3, \n",
+    "    'GRW': 7\n",
+    "}\n",
     "\n",
     "for im_num, input_dir in enumerate(image_directories):\n",
     "\n",
@@ -262,18 +266,15 @@
     "    cell_counts.loc[im_num, 'ImageName'] = os.path.basename(input_dir)\n",
     "    \n",
     "    \n",
+    "\n",
     "    # Categorize and count cells. \n",
-    "    for green_bool, red_bool, white_bool in zip(output_measurements.get_measurement('Cells', 'Children_GreenCells_Count'),\n",
-    "                                                output_measurements.get_measurement('Cells', 'Children_RedCells_Count'),\n",
-    "                                                output_measurements.get_measurement('Cells', 'Children_WhiteCells_Count')):\n",
-    "        \n",
-    "        green_code = green_bool * 4\n",
-    "        red_code = red_bool * 2\n",
-    "        white_code = white_bool # Already either 1 or zero\n",
-    "\n",
-    "        category = category_codes[green_code + red_code + white_code]\n",
-    "        cell_counts.loc[im_num, category] +=1 \n",
-    "\n",
+    "    category_codes = (output_measurements.get_measurement('Cells', 'Children_GreenCells_Count') * 4) + \\ \n",
+    "                     (output_measurements.get_measurement('Cells', 'Children_RedCells_Count') * 2) + \\\n",
+    "                      output_measurements.get_measurement('Cells', 'Children_WhiteCells_Count')\n",
+    "    \n",
+    "    \n",
+    "    for category, code in category_code_dict.items():\n",
+    "            cell_counts.loc[im_num, category] = np.non_zero(category_codes == code)\n",
     "\n"
    ]
   },
